--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
-    "eml-format": "^0.6.1",
     "tailwindcss": "^4.1.8",
+    "toaster-ts": "^0.3.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
